# Battleship-Plus

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Justfile  README.md
.cargo/: config.toml
.github/workflows/: gitlab-sync.yaml  tests.yaml
.run/: Build Examiner.run.xml  Client.run.xml  Examiner - Extern Terminal.run.xml  Examiner.run.xml  Remote Examiner.run.xml  Server Tests.run.xml  Server.run.xml  Test lobby_e2e.run.xml
battleship_plus_client/: Cargo.toml
battleship_plus_client/src/: main.rs
battleship_plus_common/: Cargo.toml
battleship_plus_server/: Cargo.toml
crates/battleship_plus_client/: Cargo.toml
crates/battleship_plus_client/assets/models/: ocean.glb
crates/battleship_plus_client/src/: effects.rs  game.rs  game_state.rs  lobby.rs  main.rs  models.rs  navigation.rs  networking.rs  placement_phase.rs  server_selection.rs
crates/battleship_plus_client_minimal/: Cargo.toml
crates/battleship_plus_client_minimal/src/: client_config.rs  game.rs  game_state.rs  main.rs  networking.rs
crates/battleship_plus_common/: Cargo.toml  build.rs
crates/battleship_plus_common/src/: lib.rs  test.rs
crates/battleship_plus_common/src/game/: mod.rs  ship.rs  ship_manager.rs
crates/battleship_plus_examiner/: Cargo.toml
crates/battleship_plus_examiner/src/: advertisement_receiver.rs  cli.rs  config.rs  main.rs
crates/battleship_plus_examiner/src/interactive/: mod.rs  snowflake.rs  styles.rs
crates/battleship_plus_examiner/src/interactive/app/: model.rs
crates/battleship_plus_examiner/src/interactive/components/: basic_interaction_listener.rs  mod.rs  server_announcements.rs  server_selection_background.rs  server_selection_server_list.rs  text_entry.rs
crates/battleship_plus_examiner/src/interactive/views/: layout.rs  mod.rs  server_selection.rs
crates/battleship_plus_macros/: Cargo.toml
crates/battleship_plus_macros/src/: lib.rs
crates/battleship_plus_server/: Cargo.toml
crates/battleship_plus_server/src/: config_provider.rs  main.rs  server.rs  server_advertisement.rs  server_test.rs  tasks.rs
crates/battleship_plus_server/src/game/: actions.rs  actions_test.rs  data.rs  mod.rs  ship.rs  ship_builder.rs  ship_manager.rs  states.rs
crates/battleship_plus_server/src/game/actions_test/: engine_boost.rs  engine_boot.rs  mod.rs  movement.rs  multi_missile.rs  place_ships.rs  player_set_ready_state.rs  predator_missile.rs  rotate.rs  scout_plane.rs  shoot.rs  team_switch.rs  torpedo.rs
crates/bevy_quinnet/: Cargo.toml
crates/bevy_quinnet/examples/breakout/: client.rs  server.rs
crates/bevy_quinnet/examples/chat/: client.rs  server.rs
crates/bevy_quinnet/src/: client.rs  lib.rs  server.rs  shared.rs
crates/bevy_quinnet/src/client/: certificate.rs
crates/bevy_quinnet/src/server/: certificate.rs
crates/bevy_quinnet_client/: Cargo.toml
crates/bevy_quinnet_client/src/: certificate.rs  client.rs  lib.rs
crates/bevy_quinnet_client/src/client/: certificate.rs
crates/bevy_quinnet_common/: Cargo.toml
crates/bevy_quinnet_common/src/: common.rs
crates/bevy_quinnet_server/: Cargo.toml
crates/bevy_quinnet_server/src/: certificate.rs  lib.rs  server.rs
crates/bevy_quinnet_server/src/server/: certificate.rs
crates/quin_client/: Cargo.toml
crates/quin_client/src/: client.rs
docker/: Dockerfile  logger.Dockerfile  logger_entrypoint.sh
tools/: battleship_plus_examiner_external_debug.sh  protobuf_dissector.lua
