[package]
name = "battleship_plus_client"
version = "0.1.0"
edition = "2021"

[dependencies]
battleship_plus_common = { path = "../battleship_plus_common" }
bevy = { version = "0.9", default_features = false, features = ["x11", "bevy_winit", "render"] }
bevy_quinnet = { path = "../bevy_quinnet" }
bevy-inspector-egui = "0.15.0"
pnet_datalink = "0.31"
tokio-util = { version = "0.7", default_features = false, features = ["net"] }
tokio = { version = "1", default_features = false, features = ["net"] }
futures = { version = "0.3", default_features = false, features = ["std"] }
bytes = "1.3"
iyes_loopless = { version = "0.9", features = ["states"] }

[features]
wayland = ["bevy/wayland"]
