[package]
name = "battleship_plus_client_minimal"
version = "0.1.0"
edition = "2021"

[dependencies]
battleship_plus_common = { path = "../battleship_plus_common" }
bevy = { version = "0.9", default_features = false, features = ["x11", "bevy_winit", "render", "dynamic"] }
bevy_quinnet_client = { path = "../bevy_quinnet_client", features = ["bevy"] }
bevy_egui = "0.18"
egui = "0.20"
egui_extras = "0.20"
bevy-inspector-egui = "0.15.0"
pnet_datalink = "0.31"
tokio-util = { version = "0.7", default_features = false, features = ["net"] }
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", default_features = false, features = ["std"] }
bytes = "1.3"
iyes_loopless = { version = "0.9", features = ["states"] }
crossbeam-channel = "0.5.6"
quinn = "*"
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
mini-redis = "0.4"

[features]
wayland = ["bevy/wayland"]
