[package]
name = "battleship_plus_common"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.3"
prost = "0.11"
tokio-util = { version = "0.7", default_features = false, features = ["codec"] }

[build-dependencies]
prost-build = { version = "0.11" }
codegen = "0.2.0"
serde = "1.0"
serde_yaml = "0.9"

[dev-dependencies]
serde = "1.0"
serde_yaml = "0.9"
