[package]
name = "battleship_plus_examiner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive", "color", "help", "suggestions"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
crossterm = "0.25.0"
tuirealm = "1.8.0"
tui-logger = "0.8.1"
throbber-widgets-tui = "0.1.3"
battleship_plus_common = { path = "../battleship_plus_common" }
bevy_quinnet_server = { path = "../bevy_quinnet_server" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", default_features = false, features = ["codec", "net"] }
futures-util = "0.3.25"
futures = "0.3.25"
quinn = "0.9.3"
rustls = { version = "0.20.7", features = ["quic"] }
rand = "0.8.5"
eyre = "0.6.8"
once_cell = "1.17.0"
chrono = "0.4.23"
pnet_datalink = "0.31.0"
rs-snowflake = "0.6.0"

[dev-dependencies]
pretty_assertions = "^1.2.1"