[package]
name = "battleship_plus_server"
version = "0.1.0"
edition = "2021"

[dependencies]
battleship_plus_common = { path = "../battleship_plus_common" }
tokio = { version = "1", features = ["full"] }
quinn = "0.9.3"
rustls = { version = "0.20.7", features = ["quic"] }
log = "0.4.17"
env_logger = "0.10.0"
