[package]
name = "battleship_plus_server"
version = "0.1.0"
edition = "2021"

[dependencies]
battleship_plus_common = { path = "../battleship_plus_common" }
tokio = { version = "1", features = ["full"] }
quinn = "0.9.3"
rustls = { version = "0.20.7", features = ["quic"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
tokio-util = { version = "0.7", default_features = false, features = ["codec", "net"] }
bytes = "1.3"
futures = { version = "0.3", default_features = false, features = ["std"] }
rstar = "0.9.3"
bevy_quinnet = { path = "../bevy_quinnet", features = ["no_bevy"] }
once_cell = "1.17.0"
rand = "0.8.5"

[features]
silent = []