[package]
name = "quin_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_quinnet_client = { path = "../bevy_quinnet_client" }
eyre = "0.6.8"
tokio = { version = "1.21.2", features = ["sync", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
quinn = "0.9.3"
futures-util = "0.3.24"
futures = "0.3.24"
base64 = "0.21.0"
once_cell = "1.16.0"
log = "0.4.17"
